# diy-panel

./: LICENSE  README.md  bitmap.c  diy-panel.c  diy-panel.sln  diy-panel.vcproj  hid.c  logging.c  make-deb.sh  make.sh  myconst.h  mytype.h  pico.c  pix_color.c  pix_parts.c  pix_plot.c  proc.c  snap.c  stat.c  thread.c  timer.c
.github/: FUNDING.yml
optional/bitmap_src/: panel.pptx
optional/diy-led/: com.c  diy-led.c  diy-led.sln  diy-led.vcproj  make-deb.sh  make.sh
optional/diy-pico/: CMakeLists.txt
optional/diy-pico/lib/LCD/: CMakeLists.txt  picolcd2.c
optional/diy-pico/src/: CMakeLists.txt  bitmap.c  common.c  main.c  picoenv.c  vram.c
